<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login_inputs"
        android:layout_width="match_parent"
        android:layout_height="543dp"
        android:layout_marginTop="0dp"
        android:baselineAligned="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingLeft="114dp"
            android:paddingTop="105dp"
            android:paddingRight="114dp"
            android:text="@string/activity_main_welcome"
            android:textColor="@color/PrimaryblackColour"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/careerhunt"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:text="@string/activity_main_career_hunt"
            android:textSize="36sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pleaseloginorsignup"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="39dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:text="@string/activity_main_login_option"
            android:textSize="14sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email_or_phone_no"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="2dp"
            app:counterEnabled="true"
            app:errorEnabled="true">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/forgotpassword?"
            style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:background="@color/AppPrimaryColour"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="ForgotPassword?"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/AppPrimaryColour"
            android:textIsSelectable="true"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="286dp"
            android:layout_height="38dp"
            android:layout_marginBottom="73dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="37dp"
            android:paddingRight="37dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/or_login_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_inputs"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp">

        <RelativeLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:paddingBottom="11dp">

            <TextView
                android:id="@+id/orloginwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="false"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/or_login_with"
                android:textSize="14sp" />

            <View
                android:layout_width="102dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="false"
                android:layout_toStartOf="@id/orloginwith"
                android:background="#B3ABAB" />

            <View
                android:layout_width="103dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/orloginwith"
                android:background="#B3ABAB" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gmail_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_login_with"
        android:layout_marginBottom="96dp"
        android:gravity="center_horizontal">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gmail_login"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc_reg" />
    </LinearLayout>

</RelativeLayout>